<?xml version="1.0"?>
<package>
  <name>rotating_lidar_to_pointcloud_transformer</name>
  <version>0.1.0</version>
  <description>Transforms a full rotation of the lidar into a point cloud.</description>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
